# adventofcode2021

./: advent-of-code2021.cabal  fix_ffitarget_arm64.sh
app/: Main.hs
src/: Day2.hs  Main.hs
