cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

author:             DevJac
maintainer:         dbuttonz@gmail.com

common default
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
                        OverloadedStrings
    ghc-options:        -Wall
                        -Wcompat
                        -Wimplicit-prelude
    build-depends:      base
                      , rio
                      , megaparsec

executable day1
    import:             default
    main-is:            Day1.hs

executable day2
    import:             default
    main-is:            Day2.hs